Fix de várias expressões. Catch-all para informar erro em inválidos.
Booleano apenas minúsculo, seguindo a definição.
Fix regex comentário, problema encontrada no arquivo avaliacao_02, com comentários se misturando a strings.
Fix regex caracteres especiais, que possuia um * perdido (oops, my bad).
Fix regex DIGIT, que podia receber mais de um sinal.
Regex string mais complexa, resolver erros encontrados em avaliacao_02.

--- a/README.org
+++ b/README.org
@@ -35,6 +35,9 @@ ctest -R e1
 
 Repositório criado como mirror de https://github.com/schnorr/pc. Criado utilizando https://stackoverflow.com/questions/10065526/github-how-to-make-a-fork-of-public-repository-private.
 
+Para executar os testes individualmente, utilize "ctest -R e1_avaliacao_00 -V".
+
+
 * Documentação
 
 Forneça aqui uma documentação de uso do seu compilador.
